[project]
name = "selenium-side-webdriver"
version = "0.1.0"
description = "Pan - Selenium IDE .side 파일을 실행하는 웹 API. 양치기 신 Pan처럼 HTML을 뜯어먹고 데이터를 취합니다."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.24.0,<5.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "faker>=20.0.0,<21.0.0",
]
